--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,17 @@ desktop.ini
 
 # Streamlit
 .streamlit/secrets.toml
+
+# Backend (repositório separado)
+backend/
+
+# Node (Frontend)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+
+# Build
+dist/
+build/
