Corrigir netlify.toml - ajustar build command e adicionar Node version

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,10 @@
 [build]
-  command = "cd frontend && npm install && npm run build"
+  base = "."
+  command = "cd frontend && npm ci && npm run build"
   publish = "frontend/dist"
+
+[build.environment]
+  NODE_VERSION = "18"
 
 [[redirects]]
   from = "/*"
