--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "."
-  command = "cd frontend && npm ci && npm run build"
+  command = "cd frontend && npm install && npx vite build"
   publish = "frontend/dist"
 
 [build.environment]
