--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "frontend"
-  command = "npm install --include=dev && npm run build"
+  command = "npm install && npx --yes vite build"
   publish = "dist"
 
 [build.environment]
