--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "serverless-http": "^3.2.0",
     "sqlite3": "^5.1.7",
     "xlsx": "^0.18.5"
   },
