--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "description": "Frontend React para gerenciamento de janelas de mudança de TI",
   "private": true,
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.3",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
