Feat: Configurar Netlify Functions para o backend
- Criado netlify/functions/api.js para wrapper serverless
- Criado netlify.toml com redirects para /api/*
- Atualizado .gitignore para permitir arquivos de config do Netlify
- Adicionado guia de configuraÃ§Ã£o CONFIGURAR_NETLIFY_FUNCTIONS.md
- Resolve erro 404 no endpoint /api/auth/profile

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,10 @@ desktop.ini
 
 # Backend (repositório separado)
 backend/
+# Exceção: arquivos de configuração do Netlify no backend
+!backend/netlify.toml
+!backend/netlify/
+!backend/netlify/**
 
 # Node (Frontend)
 node_modules/
