Feat: Configurar backend como git submodule
- Backend agora aponta para o repositÃ³rio CRQExecComMgmtBackend
- Atualizado .gitignore para nÃ£o ignorar backend (submodule)
- Facilita sincronizaÃ§Ã£o entre repositÃ³rios
- Backend serÃ¡ atualizado automaticamente quando o submodule for atualizado

--- a/.gitignore
+++ b/.gitignore
@@ -63,12 +63,8 @@ desktop.ini
 # Streamlit
 .streamlit/secrets.toml
 
-# Backend (repositório separado)
-backend/
-# Exceção: arquivos de configuração do Netlify no backend
-!backend/netlify.toml
-!backend/netlify/
-!backend/netlify/**
+# Backend (repositório separado - agora é um git submodule)
+# Não ignorar - o submodule será gerenciado pelo Git
 
 # Node (Frontend)
 node_modules/
