--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   base = "frontend"
-  command = "npm ci && npm run build"
+  # Atualizar submodules antes do build (requer GITHUB_TOKEN configurado no Netlify)
+  command = "git submodule update --init --recursive && npm ci && npm run build"
   publish = "dist"
 
 [build.environment]
