refactor: Remover submodule backend do frontend
- O backend Ã© um projeto separado e nÃ£o precisa estar no repositÃ³rio do frontend
- Remover submodule para evitar problemas no deploy do Netlify
- Atualizar .gitignore para ignorar pasta backend
- Atualizar netlify.toml para remover comando de submodules

--- a/.gitignore
+++ b/.gitignore
@@ -63,8 +63,8 @@ desktop.ini
 # Streamlit
 .streamlit/secrets.toml
 
-# Backend (repositório separado - agora é um git submodule)
-# Não ignorar - o submodule será gerenciado pelo Git
+# Backend (repositório separado - não incluir no frontend)
+backend/
 
 # Node (Frontend)
 node_modules/
