refactor: Remover chamadas diretas ao Supabase para buscar profile
- Simplificar AuthContext para usar apenas API do backend (/api/auth/profile)
- Remover todas as chamadas diretas ao Supabase para buscar user_profiles
- Frontend agora usa exclusivamente a API do backend para obter profile
- Atualizar UserManagement para usar reloadProfile() sem parÃ¢metros
- Manter fallback apenas para perfil padrÃ£o em caso de erro 404/500

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
   base = "frontend"
+  # Não atualizar submodules - o backend não é necessário para o build do frontend
   command = "npm ci && npm run build"
   publish = "dist"
 
