--- a/.gitignore
+++ b/.gitignore
@@ -63,8 +63,9 @@ desktop.ini
 # Streamlit
 .streamlit/secrets.toml
 
-# Backend (repositório separado - não incluir no frontend)
-backend/
+# Backend (repositório separado - é um git submodule)
+# Não ignorar - o submodule será gerenciado pelo Git
+# O conteúdo do backend não será incluído no deploy do frontend
 
 # Node (Frontend)
 node_modules/
