--- a/netlify.toml
+++ b/netlify.toml
@@ -2,15 +2,20 @@
   base = "frontend"
   # Não atualizar submodules - o backend não é necessário para o build do frontend
   # O backend é um repositório separado e não precisa ser clonado durante o deploy
-  command = "npm ci && npm run build"
+  # IMPORTANTE: O Netlify tenta clonar submódulos durante o checkout (antes do build)
+  # Configure no painel do Netlify: Site settings > Build & deploy > Environment variables
+  # Adicione: GIT_SUBMODULE_UPDATE = false
+  command = "git config --global submodule.recurse false && git config --global submodule.active false && npm ci && npm run build"
   publish = "dist"
 
 [build.environment]
   NODE_VERSION = "20"
   NPM_CONFIG_PRODUCTION = "false"
-  # Desabilitar atualização automática de submodules durante o build
-  # O backend pode ser commitado via este projeto, mas não é necessário para o deploy do frontend
+  # Desabilitar completamente submódulos durante o build
+  # IMPORTANTE: Configure também no painel do Netlify: Site settings > Build & deploy > Environment variables
+  # Adicione: GIT_SUBMODULE_UPDATE = false
   GIT_SUBMODULE_UPDATE = "false"
+  GIT_SUBMODULE_STRATEGY = "none"
   # Configurar secrets scanning para ignorar variáveis VITE_* (são públicas e esperadas no build)
   # Essas variáveis são substituídas pelo Vite no build e aparecem no código JavaScript gerado
   SECRETS_SCAN_OMIT_KEYS = "VITE_API_URL,VITE_SUPABASE_URL,VITE_SUPABASE_ANON_KEY,API_BASE_URL"
