--- a/.gitignore
+++ b/.gitignore
@@ -1,90 +1,80 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
+# Dependencies
+node_modules/
+frontend/node_modules/
+backend/node_modules/
+.pnp
+.pnp.js
+
+# Testing
+coverage/
+frontend/coverage/
+backend/coverage/
+
+# Production
 build/
-develop-eggs/
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
+frontend/dist/
+backend/build/
 
-# Virtual Environment
-venv/
-ENV/
-env/
-.venv
+# Misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# IDEs
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
+# OS
+Thumbs.db
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+.venv/
+venv/
+ENV/
+env/
+
 # Database
 *.db
-*.db-journal
 *.sqlite
 *.sqlite3
-db/activity_control.db
 
-# Data files
-data/
-*.xlsx
-*.xls
+# Backend (submódulo - não incluir no deploy do Netlify)
+# O backend é um repositório separado e não precisa ser clonado durante o deploy
+# Para desenvolvimento local, adicione o backend manualmente se necessário
+backend/
 
-# Environment variables
-.env
-.env.local
-.env.*
-!.env.example
-*.env
-
-# OS
-.DS_Store
-Thumbs.db
-desktop.ini
-
-# Logs
-*.log
-
-# Streamlit
-.streamlit/secrets.toml
-
-# Backend (repositório separado - é um git submodule)
-# O backend pode ser commitado via este projeto, mas não é necessário para o build do frontend
-# O frontend se comunica com o backend via API HTTP
-# O backend deve ser deployado separadamente (ex: Netlify Functions, Railway, etc.)
-# 
-# Ignorar apenas arquivos temporários do backend, mas manter o diretório para commits
-backend/node_modules/
+# Arquivos temporários do backend
 backend/.env
-backend/.env.local
-backend/uploads/
-backend/*.db
-backend/*.log
-backend/dist/
+backend/logs/
 backend/build/
+backend/node_modules/
 
-# Node (Frontend)
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-package-lock.json
+# Sincronizador
+sincronizador/__pycache__/
+sincronizador/*.pyc
+sincronizador/.venv/
+sincronizador/venv/
+sincronizador/*.log
 
-# Build
-dist/
-build/
+# Backup Python
+backup_python/__pycache__/
+backup_python/*.pyc
+backup_python/.venv/
+backup_python/venv/
+backup_python/*.log
